--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,2 +1,30 @@
 logging.level.org.springframework=info
-server.port=3000
+server.port=3030
+spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb;
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
+spring.datasource.username=social-media-user
+spring.datasource.password=dummypassword
+
+spring.jpa.database=MYSQL
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.security.user.name=username
+spring.security.user.password=password
+
+# \connect social-media-user@localhost:3306
+#docker run --detach \
+#  --env MYSQL_ROOT_PASSWORD=dummypassword \
+#  --env MYSQL_USER=social-media-user \
+#  --env MYSQL_PASSWORD=dummypassword \
+#  --env MYSQL_DATABASE=social-media-database \
+#  --name mysql \
+#  --publish 3306:3306 mysql:8-oracle
+
+
+#docker run \
+#  --name mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=myql -d mysql:latest
