--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.springframework=info
+logging.level.org.springframework=debug
 server.port=3030
 spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb;
