Created the PUT Api

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -17,6 +17,11 @@ spring.security.user.name=username
 spring.security.user.password=password
 
 
+#export M2_HOME="/Users/raghavkhanna/Downloads/apache-maven-3.8.6"
+#PATH="${M2_HOME}/bin:${PATH}"
+#export PATH
+
+
 # \connect social-media-user@localhost:3306
 #docker run --detach \
 #  --env MYSQL_ROOT_PASSWORD=dummypassword \
