--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,13 +7,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Use Java 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
+          distribution: 'adopt'
+          cache: maven
+
+      - name: Set Up Docker
+        uses: docker-practice/actions-setup-docker@master
+
+      - name: Launching Database on Docker
+        run: |
+          docker run --detach \--env MYSQL_ROOT_PASSWORD=dummypassword \--env MYSQL_USER=social-media-user \--env MYSQL_PASSWORD=dummypassword \--env MYSQL_DATABASE=social-media-database \--name mysql \--publish 3306:3306 mysql:8-oracle
 
       - name: Build with Maven
         run: mvn clean install
