--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
 spring.datasource.username=social-media-user
 spring.datasource.password=dummypassword
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.username=user
+spring.datasource.password=user
+
 spring.jpa.database=MYSQL
 
 spring.jpa.hibernate.ddl-auto=update
