--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.port=3030
 spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb;
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
-spring.datasource.username=social-media-user
-spring.datasource.password=dummypassword
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
+#spring.datasource.username=social-media-user
+#spring.datasource.password=dummypassword
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
