added ami scripts

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Launching Database on Docker
         run: |
-          docker run --detach \--env MYSQL_ROOT_PASSWORD=dummypassword \--env MYSQL_USER=social-media-user \--env MYSQL_PASSWORD=dummypassword \--env MYSQL_DATABASE=social-media-database \--name mysql \--publish 3306:3306 mysql:8-oracle
+          docker run --detach \--env MYSQL_ROOT_PASSWORD=user \--env MYSQL_USER=user \--env MYSQL_PASSWORD=user \--env MYSQL_DATABASE=mydatabase \--name mysql \--publish 3306:3306 mysql:8-oracle
 
       - name: Build with Maven
         run: mvn clean install
