--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -50,14 +50,14 @@ jobs:
         env:
           PACKER_LOG: 1 # enable debug log for packer
 
-#      - name: Build Artifact
-#        uses: hashicorp/packer-github-actions@master
-#        run: |
-#          cd ami
-#          packer build .
-#        with:
-#          command: build
-#          arguments: "-color=false -on-error=abort"
-#          target: ami/
-#        env:
-#          PACKER_LOG: 1
+      - name: Build AMI with artifacts
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: build
+          arguments: "-color=false -on-error=abort"
+          target: variables.pkr.hcl ami.pkr.hcl
+          working_directory: ami
+        env:
+          PACKER_LOG: 1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
