--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -39,6 +39,10 @@ jobs:
 #        with:
 #          name: artifacts
 #          path: staging
+      - name: Initialize Packer Template
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: init
 
       - name: Validate Packer
         uses: hashicorp/packer-github-actions@master
@@ -53,8 +57,10 @@ jobs:
       - name: Packer build
         uses: hashicorp/packer-github-actions@master
         with:
-          templateFile: 'ami.pkr.hcl'
-          workingDir: 'ami'
+          command: build
+          arguments: "-color=false -on-error=abort"
+          target: ami.pkr.hcl
+          working_directory: ami
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
