--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-          cache: maven
+          cache: 'maven'
 
       - name: Set Up Docker
         uses: docker-practice/actions-setup-docker@master
@@ -39,6 +39,10 @@ jobs:
 #        with:
 #          name: artifacts
 #          path: staging
+#      - name: Initialize Packer Template
+#        uses: hashicorp/packer-github-actions@master
+#        with:
+#          command: init
 
       - name: Validate Packer
         uses: hashicorp/packer-github-actions@master
@@ -50,14 +54,29 @@ jobs:
         env:
           PACKER_LOG: 1 # enable debug log for packer
 
-#      - name: Build Artifact
-#        uses: hashicorp/packer-github-actions@master
-#        run: |
-#          cd ami
-#          packer build .
-#        with:
-#          command: build
-#          arguments: "-color=false -on-error=abort"
-#          target: ami/
-#        env:
-#          PACKER_LOG: 1
+      - name: Packer build
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: build
+          arguments: "-color=false -on-error=abort"
+          target: ami.pkr.hcl
+          working_directory: ami
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_PROFILE: ${{ secrets.AWS_PROFILE }}
+
+
+        #      - name: Build AMI with artifacts
+        #        uses: hashicorp/packer-github-actions@master
+        #        with:
+        #          command: build
+        #          arguments: "-color=false -on-error=abort"
+        #          target: .
+        #          working_directory: ami
+        #        env:
+        #          PACKER_LOG: 1
+        #          AWS_PROFILE: ${{ secrets.AWS_PROFILE }}
+        ##          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+
