--- a/.github/workflows/push-request.yaml
+++ b/.github/workflows/push-request.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  AMI Builder:
+  AMI_Builder:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
