--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,16 +28,16 @@ jobs:
 
       - name: Test
         run: mvn test -DskipTests=false
-#
-#      - name: Validate Packer
-#        uses: hashicorp/packer-github-actions@master
-#        with:
-#          command: validate
-#          arguments: -syntax-only
-#          target: ami.pkr.hcl variables.pkr.hcl
-#          working_directory: ami
-#        env:
-#          PACKER_LOG: 1 # enable debug log for packer
+
+      - name: Validate Packer
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: validate
+          arguments: -syntax-only
+          target: ami.pkr.hcl variables.pkr.hcl
+          working_directory: ami
+        env:
+          PACKER_LOG: 1 # enable debug log for packer
 #
 #      - name: Packer build
 #        uses: hashicorp/packer-github-actions@master
