--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           command: validate
           arguments: -syntax-only
-          target: ami.pkr.hcl variables.pkr.hcl
+          target: ami.pkr.hcl
           working_directory: ami
         env:
           PACKER_LOG: 1 # enable debug log for packer
