--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,20 @@
 logging.level.org.springframework=debug
-server.port=8081
+server.port=8080
 spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:testdb;
 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
-#spring.datasource.username=social-media-user
-#spring.datasource.password=dummypassword
+
+bucket.name=
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://csye6225-rk222.cohb0yppe16s.us-east-1.rds.amazonaws.com:3306/csye6225
+#spring.datasource.username=csye6225master
+#spring.datasource.password=csye6225password
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
 spring.datasource.username=user
 spring.datasource.password=user
+
+#cloud.aws.credentials.instanceProfile=true
+
 
 spring.jpa.database=MYSQL
 
