logs and metrics implementation

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<version>1.9.13</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.timgroup</groupId>
+			<artifactId>java-statsd-client</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+
 		<!--		<dependency>-->
 		<!--			<groupId>com.fasterxml.jackson.dataformat</groupId>-->
 		<!--			<artifactId>jackson-dataformat-xml</artifactId>-->
