--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-logging.level.org.springframework=debug
+logging.level.org.springframework=info
 server.port=8080
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 
 
 bucket.name=
@@ -28,6 +28,14 @@ spring.security.user.password=password
 #export M2_HOME="/Users/raghavkhanna/Downloads/apache-maven-3.8.6"
 #PATH="${M2_HOME}/bin:${PATH}"
 #export PATH
+
+logging.file.name=csye6225.log
+#logging.file.path=${catalina.base}/logs/
+logging.file.path=/Users/raghavkhanna/Desktop/webapp/webapp/logs/
+logging.level.com.cloud.rest.webservices.webapp.*=INFO
+publish.metrics = true
+metrics.server.hostname=localhost
+metrics.server.port=8125
 
 
 # \connect social-media-user@localhost:3306
