Changes in cloudwatch json file

--- a/ami/cloudwatch-config.json
+++ b/ami/cloudwatch-config.json
@@ -8,7 +8,7 @@
       "files": {
         "collect_list": [
           {
-            "file_path": "/home/ubuntu/csye6225.log",
+            "file_path": "/csye6225.log",
             "log_group_name": "csye6225",
             "log_stream_name": "webapp"
           }
