--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
 			<artifactId>aws-java-sdk-sns</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-dynamodb</artifactId>
+			<version>1.11.602</version>
+		</dependency>
+
         <!--		<dependency>-->
 <!--			<groupId>org.projectlombok</groupId>-->
 <!--			<artifactId>lombok</artifactId>-->
