--- a/.github/workflows/push-request.yaml
+++ b/.github/workflows/push-request.yaml
@@ -16,6 +16,12 @@ jobs:
           distribution: 'adopt'
           cache: 'maven'
 
+      - name: Installing AWS cli
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/aws-cli --update
+
       - name: Build Maven
         run: mvn clean install
 
@@ -38,3 +44,10 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_PROFILE: ${{ secrets.AWS_PROFILE }}
+
+      - name: Copying Artifacts
+        working_directory: ./ami
+        run: |
+          AMI_ID=$(jq -r '.builds[-1].artifact_id' manifest.json | cut -d ":" -f2)
+          echo $AMI_ID
+
