changes in push request workflow

--- a/.github/workflows/push-request.yaml
+++ b/.github/workflows/push-request.yaml
@@ -46,7 +46,7 @@ jobs:
           AWS_PROFILE: ${{ secrets.AWS_PROFILE }}
 
       - name: Copying Artifacts
-        working_directory: ./ami
+        working-directory: ./ami
         run: |
           AMI_ID=$(jq -r '.builds[-1].artifact_id' manifest.json | cut -d ":" -f2)
           echo $AMI_ID
